# nf-python

./: .gitignore  README.md  nextflow.config  settings.gradle
.github/: release.yml
.github/workflows/: nextflow-plugin.yml  plugin-release.yml  pypi-release.yml
doc/: protocol.md
plugins/nf-python/: build.gradle
plugins/nf-python/src/main/nextflow/python/: PythonExtension.groovy  PythonPlugin.groovy
plugins/nf-python/src/main/python/: nextflow.py
py/: README.md  pyproject.toml
py/nf_python/: __init__.py  nextflow.py
test/: echo_kwargs.py  test_flow.nf
test/test-conda/: conda.config  test_conda_config.nf  test_conda_inline.nf
test/test-datatypes/: test_flow.nf
test/test-executable/: executable.config  test_executable_config.nf  test_executable_inline.nf
