[project]
name = "nf-python"
version = "0.0.1"
authors = [
  { name="Roy Jacobson", email="roy.jacobson@weizmann.ac.il" },
]
description = "A Python package for seamless, type-safe, and version-aware integration between Nextflow and Python scripts."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["COPYING"]

[project.urls]
Homepage = "https://github.com/royjacobson/nf-python"
Issues = "https://github.com/royjacobson/nf-python/issues"
