[project]
name = "nf-python-plugin"
version = "0.1.1"
authors = [
  { name="Roy Jacobson", email="roy.jacobson@weizmann.ac.il" },
]
description = "A Python package for seamless, type-safe, and version-aware integration between Nextflow and Python scripts."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Development Status :: 4 - Beta",
]
license = "Apache-2.0"
license-files = ["COPYING"]

[project.urls]
Homepage = "https://github.com/royjacobson/nf-python"
Issues = "https://github.com/royjacobson/nf-python/issues"
